examples/apps1/daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: sample-app1
  namespace: sample-app1
  labels:
    k8s-app: sample-app1
spec:
  selector:
    matchLabels:
      k8s-app: sample-app1
  template:
    metadata:
      labels:
        k8s-app: sample-app1
    spec:
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
            protocol: TCP
            name: http
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: nginx-home
          mountPath: /usr/share/nginx/html
      - name: tools
        image: nicolaka/netshoot:latest
        imagePullPolicy: IfNotPresent
        command:
          - 'sleep'
          - '3600'
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: nginx-home
